<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basics"
            android:title="@string/getting_started_category" />
        <item
            android:id="@+id/nav_styles"
            android:title="@string/styles_category" />
        <item
            android:id="@+id/nav_annotations"
            android:title="@string/annotations_category" />
        <item
            android:id="@+id/nav_camera"
            android:title="@string/camera_category" />
        <item
            android:id="@+id/nav_offline"
            android:title="@string/offline_category" />
        <item
            android:id="@+id/nav_mas"
            android:title="@string/android_services_category" />
    </group>

    <!--
        <item android:title="Mapbox Android Services">
            <menu>
                <item
                    android:id="@+id/nav"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:title="Send" />
            </menu>
        </item>-->
</menu>
